@@ -2,6 +2,7 @@ svn / trunk
 - "edit contact" in chat window context menu
 - "send file" in chat window context menu
 - meaningful titles for file open and save dialogs
+- removed the "bitmap not found" error when closing file dialogs
 
 version 0.9.9.191
 - implemented configuration dialog
